--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="flex flexx">
                     <div class="price">$345.99</div>
-                    <button class="btn-hover">Join Now</button>
+                    <button class="btn-hover-ui btn-hover">Join Now</button>
                 </div>
             </div>
             <div class="pc-card flexx">
@@ -76,7 +76,7 @@
                 </div>
                 <div class="flex flexx">
                     <div class="price">$125.99</div>
-                    <button class="btn-hover">Join Now</button>
+                    <button class="btn-hover-py btn-hover">Join now</button>
                 </div>
             </div>
             <div class="pc-card flexx">
@@ -88,7 +88,7 @@
                 </div>
                 <div class="flex flexx">
                     <div class="price">$99.990</div>
-                    <button class="btn-hover">Join Now</button>
+                    <button class="btn-hover-pd btn-hover">Join Now</button>
                 </div>
             </div>
         </div>
@@ -100,21 +100,21 @@
         <p>Invites the knowledge and life with beauty in our campus leading and making the future leaders</p>
         <div class="row">
             <div class="campus-col">
-                <img src="eduford_img/london.png">
+                <img src="eduford_img/google.jpg">
                 <div class="layer">
-                    <h3>LONDON</h3>
+                    <h3>GOOGLE</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="eduford_img/newyork.png">
+                <img src="eduford_img/amazon.jpg">
                 <div class="layer">
-                    <h3>NEW YORK</h3>
+                    <h3>AMAZON</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="eduford_img/washington.png">
+                <img src="eduford_img/uber.jpg">
                 <div class="layer">
-                    <h3>WASHINGTON</h3>
+                    <h3>UBER</h3>
                 </div>
             </div>
         </div>
@@ -177,16 +177,6 @@
 
 
     <!-----JavaScript for Toggle ----->
-        <script>
-        var navLinks=document.getElementById("navLinks");
-        function showMenu(){
-            /*navLinks.style.right="0";*/      
-            navLinks.style.display="block";
-        }
-        function hideMenu(){
-            /*navLinks.style.right="-200px";*/
-            navLinks.style.display="none";
-        }
-    </script>
+       <script src="script.js"></script>
 </body>
 </html>
