--- a/about.html
+++ b/about.html
@@ -18,50 +18,43 @@
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
 
                 <ul>
-                    <li><a href="http://127.0.0.1:5500/index.html">HOME</a></li>
-                    <li><a href="http://127.0.0.1:5500/about.html">ABOUT</a></li>
-                    <li><a href="http://127.0.0.1:5500/course.html">COURSE</a></li>
-                    <li><a href="http://127.0.0.1:5500/blog.html">BLOG</a></li>
-                    <li><a href="http://127.0.0.1:5500/contact.html">CONTACT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">EVENT</a></li>
+                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="sponsor.html">SPONSOR</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="contact.html">LOGIN</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>ABOUT US</h1>
+        <h1>EVENTS</h1>
     </section>
     <!-----about us content----->
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>We are the World's University</h1>
-                <p>Welcome to our prestigious university, a hub of academic excellence offering a comprehensive range of courses across all fields of study. Our dedicated faculty, state-of-the-art facilities, and innovative research opportunities provide an enriching environment for personal and professional growth. We pride ourselves on fostering a diverse and inclusive community that encourages intellectual curiosity and lifelong learning. Join us to unlock your potential and embark on a transformative educational journey.</p>
+                <h1>We are EDUFORD</h1>
+                <p>Welcome to Eduford, the bridge between today’s students and tomorrow’s leaders. Our platform is dedicated to connecting college students with alumni who are eager to share their knowledge, experiences, and professional insights. By fostering meaningful connections, we aim to empower students to make informed decisions about their future careers while giving alumni the opportunity to give back and stay engaged with their alma mater.
+
+                    Whether you're seeking mentorship, career advice, or just a chance to reconnect with your college community, Eduford is here to help you grow, learn, and succeed.</p>
                 <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
             </div>
             <div class="about-col">
-                <img src="eduford_img/about.jpg">
+                <img src="eduford_img/EVENT1.jpg">
             </div>
         </div>
     </section>
    
 <!------footer--------->
-<section class="footer">
+<!-- <section class="footer">
     <h4>About Us</h4>
     <p>Welcome to our prestigious university, a hub of academic excellence offering a comprehensive range of courses across all fields of study. Our dedicated faculty, state-of-the-art facilities, and innovative research opportunities provide an<br> enriching environment for personal and professional growth. We pride ourselves on fostering a diverse and inclusive community that encourages intellectual curiosity and lifelong learning. Join us to unlock your potential and embark on a transformative educational journey.</p>
     <p>Made by Khadija Fatima</p>
-</section>
+</section> -->
 
 
     <!-----JavaScript for Toggle ----->
-    <script>
-        var navLinks=document.getElementById("navLinks");
-        function showMenu(){
-            /*navLinks.style.right="0";*/      
-            navLinks.style.display="block";
-        }
-        function hideMenu(){
-            /*navLinks.style.right="-200px";*/
-            navLinks.style.display="none";
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
