--- a/index.html
+++ b/index.html
@@ -18,24 +18,25 @@
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
 
                 <ul>
-                    <li><a href="http://127.0.0.1:5500/index.html">HOME</a></li>
-                    <li><a href="http://127.0.0.1:5500/about.html">ABOUT</a></li>
-                    <li><a href="http://127.0.0.1:5500/course.html">COURSE</a></li>
-                    <li><a href="http://127.0.0.1:5500/blog.html">BLOG</a></li>
-                    <li><a href="http://127.0.0.1:5500/contact.html">CONTACT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">EVENT</a></li>
+                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="sponsor.html">SPONSOR</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="contact.html">LOGIN</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>World's University</h1>
-            <p>Making website is one of the important and easiest thing in the world. <br>You need few scripted skills like HTML,CSS and Java and you are good to go.</p>
-            <a href="" class="hero-btn">Visit Us To know More</a>
+            <h1>EDUFORD</h1>
+            <p>"Where cherished memories meet endless opportunities, and alumni guidance raises new standards."</p>
+            <a href="contact.html" class="hero-btn">Visit Us To know More</a>
         </div>
     </section>
     <!----Course-->
     <section class="course">
-        <h1>Courses we offer</h1>
+        <!-- <h1>Courses we offer</h1>
         <p>We offer all the courses, such as engineering for different field, literature, law, bussiness also the art courses like embroidery, sketching and writing</p>
         <div class="row">
             <div class="course-col">
@@ -50,11 +51,11 @@
                 <h3>Post-Graduation</h3>
                 <p>Intermediate courses cover all subjects, not just the professional courses but any kind a course can be opted</p>
             </div>
-        </div>
+        </div> -->
         <div class="section7">
         <h2>All Popular Courses</h2>
         <div class="pcourse flexx">
-            <div class="pc-card flexx">
+            <div class="pc-card flexx course-col">
                 <div class="pc-headline">UI UX Design Course
                 </div>
                 <div class="middle flexx">
@@ -64,10 +65,10 @@
                 </div>
                 <div class="flex flexx">
                     <div class="price">$345.99</div>
-                    <button class="btn-hover-ui btn-hover">Join Now</button>
+                    <button class="svn-btn btn-hover-ui btn-hover">Join Now</button>
                 </div>
             </div>
-            <div class="pc-card flexx">
+            <div class="pc-card flexx course-col">
                 <div class="pc-headline">Python Programming</div>
                 <div class="middle flexx">
                     <img src="students.png" alt="students">
@@ -76,10 +77,10 @@
                 </div>
                 <div class="flex flexx">
                     <div class="price">$125.99</div>
-                    <button class="btn-hover-py btn-hover">Join now</button>
+                    <button class="svn-btn btn-hover-py btn-hover">Join now</button>
                 </div>
             </div>
-            <div class="pc-card flexx">
+            <div class="pc-card flexx course-col">
                 <div class="pc-headline">Product Design Course</div>
                 <div class="middle flexx">
                     <img src="students.png" alt="students">
@@ -88,7 +89,7 @@
                 </div>
                 <div class="flex flexx">
                     <div class="price">$99.990</div>
-                    <button class="btn-hover-pd btn-hover">Join Now</button>
+                    <button class="svn-btn btn-hover-pd btn-hover">Join Now</button>
                 </div>
             </div>
         </div>
@@ -96,22 +97,23 @@
     </section>
     <!-----campus---->
     <section class="campus">
-        <h1>Our Global Campus</h1>
+        <h1>Our Global SPONSOR</h1>
         <p>Invites the knowledge and life with beauty in our campus leading and making the future leaders</p>
         <div class="row">
-            <div class="campus-col">
+            <div class="campus-col google">
+                
                 <img src="eduford_img/google.jpg">
                 <div class="layer">
                     <h3>GOOGLE</h3>
                 </div>
             </div>
-            <div class="campus-col">
+            <div class="campus-col amazon">
                 <img src="eduford_img/amazon.jpg">
                 <div class="layer">
                     <h3>AMAZON</h3>
                 </div>
             </div>
-            <div class="campus-col">
+            <div class="campus-col uber">
                 <img src="eduford_img/uber.jpg">
                 <div class="layer">
                     <h3>UBER</h3>
@@ -119,28 +121,7 @@
             </div>
         </div>
     </section>
-    <!------facilities---->
-    <section class="facilities">
-        <h1>Our Facilities</h1>
-        <p>Faclities are according to the branch you take and your major but the facilities are served plenty</p>
-        <div class="row">
-            <div class="facilities-col">
-                <img src="eduford_img/library.png">
-                <h3>World Class Library</h3>
-                <p>Library enjoyable, productive and knowledgable, helps to create minds and future</p>
-            </div>
-            <div class="facilities-col">
-                <img src="eduford_img/basketball.png">
-                <h3>Plays of Confidence</h3>
-                <p>Students with make ther mind and body as fast as their Confidence</p>
-            </div>
-            <div class="facilities-col">
-                <img src="eduford_img/cafeteria.png">
-                <h3>Cafe with Coffee</h3>
-                <p>Productive and energetic with coffee of your taste</p>
-            </div>
-        </div>
-    </section>
+    
 <!----testimonials---->
 <section class="testimonials">
     <h1>What Our Students says</h1>
@@ -149,14 +130,14 @@
         <div class="testimonials-col">
             <img src="eduford_img/user1.jpg">
             <div>
-                <p>The University is defnetly a great place to expplore success, the facilities provided are very convinient and amazing</p>
+                <p>This platform has given me the opportunity to reconnect with my university and guide students who are in the same position I was once in. It’s rewarding to share my experiences and make a real difference in their lives</p>
                 <h3>Christy</h3>
             </div>
         </div>
         <div class="testimonials-col">
             <img src="eduford_img/user2.jpg">
             <div>
-                <p>The University is defnetly a great place to expplore success, the facilities provided are very convinient and amazing</p>
+                <p>This platform has given me the opportunity to reconnect with my university and guide students who are in the same position I was once in. It’s rewarding to share my experiences and make a real difference in their lives</p>
                 <h3>Joan</h3>
             </div>
         </div>
@@ -166,13 +147,15 @@
 <!---call to action--->
 <section class="cta">
     <h1>Enroll for our Various Online Courses<br> Anywhere from the world</h1>
-    <a href="" class="hero-btn">CONTACT US</a>
+    <a href="contact.html" class="hero-btn">CONTACT US</a>
 </section>
 <!------footer--------->
 <section class="footer">
     <h4>About Us</h4>
-    <p>Welcome to our prestigious university, a hub of academic excellence offering a comprehensive range of courses across all fields of study. Our dedicated faculty, state-of-the-art facilities, and innovative research opportunities provide an<br> enriching environment for personal and professional growth. We pride ourselves on fostering a diverse and inclusive community that encourages intellectual curiosity and lifelong learning. Join us to unlock your potential and embark on a transformative educational journey.</p>
-    <p>Made by Khadija Fatima</p>
+    <p>Welcome to Eduford, the bridge between today’s students and tomorrow’s leaders. Our platform is dedicated to connecting college students with alumni who are eager to share their knowledge, experiences, and professional insights. By fostering meaningful connections, we aim to empower students to make informed decisions about their future careers while giving alumni the opportunity to give back and stay engaged with their alma mater.
+
+        Whether you're seeking mentorship, career advice, or just a chance to reconnect with your college community, Eduford is here to help you grow, learn, and succeed.</p>
+    <p>Made by Khadija Fatima ,Uzma Fatima,Habeeba Khatoon</p>
 </section>
 
 
